# anycache

./: .cookiecutter.json  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.rst  anycache.sublime-project  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
anycache/: __init__.py
docs/: api.md  api.rst  conf.py  index.md  index.rst  installation.rst
src/anycache/: __init__.py
tests/: __init__.py  advanced_test.py  basic_test.py  filedep_test.py  maxsize_test.py  persistent_test.py  test_advanced.py  test_basic.py  test_filedep.py  test_maxage.py  test_maxsize.py  test_parallel.py  test_persistent.py
