[project]
name = "anycache"
dynamic = ["version"]
description = "Cache any python object to file using improved pickling"
requires-python = ">=3.8"
dependencies = [
    "dill>=0.3.7",
    "filelock>=3.13.0",
]
authors = [
    {name="Daniel Jakschik", email="c0fec0de@gmail.com"}
]
readme = "README.rst"
license = "Apache-2.0"
keywords = [
    "cache",
    "caching",
    "cache file",
    "pickle",
    "dill",
]

classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
homepage = "https://github.com/c0fec0de/anycache"
repository = "https://github.com/c0fec0de/anycache"
documentation = "https://anycache.readthedocs.io/en/latest/"
bugs = "https://github.com/c0fec0de/anycache/issues"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "scm"

[dependency-groups]
dev = [
    "coverage>=7.6.1",
    "pre-commit>=3.5.0",
    "pytest>=8.3.4",
    "sphinx>=7.1.2",
    "sphinx-rtd-theme>=3.0.2",
]

# RUFF
[tool.ruff]
line-length = 120
fix = true
target-version = "py38"

[tool.ruff.lint]
select = [
    # isort
    "I",
    # pyflakes
    "F",
    # pycodestyle
    "E", "F",
    # pydocstyle
    "D",
    # pep8-naming
    "N",
    # RUFF specifi
    "RUF",
    # PerfLint
    "PERF",
    # flynt
    "FLY",
]
ignore = [
    "D211", "D213", "D107", "D105",
]

[tool.ruff.lint.pydocstyle]
convention = "google"
